# rez-flatbuffers

./: CMakeLists.txt  package.py
cmake/: flatbuffers.cmake
